--- a/public/css/player.css
+++ b/public/css/player.css
@@ -91,7 +91,7 @@
   top: -8px;
   width: 8px;
   height: 22px;
-  background: url("https://i.imgur.com/tsqwz1N.png") no-repeat center;
+  background: url("../img/player/tsqwz1N.png") no-repeat center;
   border: none;
   outline: none;
   margin: 0 0 0 -3px;
@@ -132,7 +132,7 @@
   margin-left: -9px;
   width: 22px;
   height: 22px;
-  background-image: url("https://i.imgur.com/V5i67V2.png");
+  background-image: url("../img/player/V5i67V2.png");
 }
 .music-player .controls .volume-level .icon-volume-up, .music-player .controls .volume-level .icon-volume-down {
   position: absolute;
@@ -148,39 +148,39 @@
 [class^=icon-] {
   width: 18px;
   height: 18px;
-  background: url("https://i.imgur.com/E09T8tf.png") no-repeat center;
+  background: url("../img/player/E09T8tf.png") no-repeat center;
   display: block;
 }
 
 .icon-shuffle {
-  background-image: url("https://i.imgur.com/AQAxRxS.png");
+  background-image: url("../img/player/AQAxRxS.png");
 }
 .icon-heart {
-  background-image: url("https://i.imgur.com/E09T8tf.png");
+  background-image: url("../img/player/E09T8tf.png");
 }
 .icon-repeat {
-  background-image: url("https://i.imgur.com/338F8MX.png");
+  background-image: url("../img/player/338F8MX.png");
 }
 .icon-share {
-  background-image: url("https://i.imgur.com/PGIC6ME.png");
+  background-image: url("../img/player/PGIC6ME.png");
 }
 .icon-previous {
-  background-image: url("https://i.imgur.com/LIqj0nr.png");
+  background-image: url("../img/player/LIqj0nr.png");
 }
 .icon-play {
-  background-image: url("https://i.imgur.com/xlBv5aR.png");
+  background-image: url("../img/player/xlBv5aR.png");
 }
 .icon-pause {
-  background-image: url("https://i.imgur.com/lIhwduj.png");
+  background-image: url("../img/player/lIhwduj.png");
 }
 .icon-next {
-  background-image: url("https://i.imgur.com/Mb6Nzj5.png");
+  background-image: url("../img/player/Mb6Nzj5.png");
 }
 .icon-volume-up {
-  background-image: url("https://i.imgur.com/qqdoddi.png");
+  background-image: url("../img/player/qqdoddi.png");
 }
 .icon-volume-down {
-  background-image: url("https://i.imgur.com/3iirf2f.png");
+  background-image: url("../img/player/3iirf2f.png");
 }
 
 .copyrights {
